<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Ahmed, Umar Bello.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/side_margin_small"
            android:layout_marginLeft="@dimen/side_margin_normal"
            android:layout_marginRight="@dimen/side_margin_normal"
            android:textColorHint="@color/gray">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_title"
                android:inputType="text"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:maxLines="1"
                />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/side_margin_small"
            android:layout_marginLeft="@dimen/side_margin_normal"
            android:layout_marginRight="@dimen/side_margin_normal"
            android:textColorHint="@color/gray">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/item_desc"
                android:inputType="text"
                android:textColor="@color/white"
                android:textSize="18sp"
                />
        </android.support.design.widget.TextInputLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_select_date"
            android:textSize="18sp"
            android:textColor="@color/black"
            android:text="@string/title_select_date"
            android:layout_margin="@dimen/side_margin_normal"
            android:drawableStart="@drawable/ic_date_range_black_24dp"
            android:drawablePadding="@dimen/side_margin_small"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="@dimen/side_margin_normal"
            android:layout_marginRight="@dimen/side_margin_normal"
            android:weightSum="2"
            >

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/text_start_date"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/side_margin_small"
                tools:text="12/03/2017"
                />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/text_end_date"
                android:textSize="18sp"
                android:textColor="@color/black"
                android:layout_marginTop="@dimen/side_margin_small"
                tools:text="31/03/2017"
                />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:text="@string/title_interval"
            android:layout_marginStart="@dimen/side_margin_normal"
            android:layout_marginTop="@dimen/side_margin_large"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginStart="@dimen/side_margin_normal"
            android:layout_marginEnd="@dimen/side_margin_normal"
            android:weightSum="2">

            <EditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/add_value"
                android:id="@+id/edit_value"
                />

            <Spinner
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginStart="@dimen/side_margin_small"
                android:id="@+id/spinner_interval"
                android:entries="@array/interval"
                />
        </LinearLayout>
    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/fab_add_medication"
        android:text="@string/title_add_medication"
        android:textAllCaps="false"
        android:layout_marginStart="@dimen/side_margin_small"
        android:layout_marginEnd="@dimen/side_margin_small"
        android:layout_marginBottom="@dimen/side_margin_small"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</android.support.constraint.ConstraintLayout>