<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Ahmed, Umar Bello.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_personal_info"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/profile_personal_information"
        android:layout_marginStart="@dimen/side_margin_normal"
        android:layout_marginEnd="@dimen/side_margin_normal"
        android:layout_marginTop="@dimen/side_margin_normal"
        app:layout_constraintTop_toTopOf="parent"
        />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/side_margin_small"
        android:id="@+id/card_personal_info"
        app:layout_constraintTop_toBottomOf="@id/text_personal_info">
        
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:weightSum="2"
                android:baselineAligned="false"
                android:layout_marginStart="@dimen/side_margin_normal"
                android:layout_marginEnd="@dimen/side_margin_normal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/gray">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_first_name"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textColorHint="@color/gray">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/edit_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/profile_last_name"
                        android:inputType="text"
                        android:textColor="@color/black"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="@dimen/side_margin_large"
                android:textColorHint="@color/gray">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/edit_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/login_email_address"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/black"
                    android:textSize="15sp" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_medication_info"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/profile_medication_info"
        android:layout_marginStart="@dimen/side_margin_normal"
        android:layout_marginEnd="@dimen/side_margin_normal"
        android:layout_marginTop="@dimen/side_margin_normal"
        app:layout_constraintTop_toBottomOf="@id/card_personal_info"
        />

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/side_margin_small"
        app:layout_constraintTop_toBottomOf="@id/text_medication_info">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_marginStart="@dimen/side_margin_small"
                android:layout_marginEnd="@dimen/side_margin_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/gray"
                    android:text="@string/profile_total_medications"
                    android:layout_marginTop="@dimen/side_margin_small"
                    app:layout_constraintTop_toBottomOf="@id/card_personal_info"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_total_medications"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/side_margin_small"
                    android:layout_marginTop="@dimen/side_margin_small"
                    tools:text="16"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_marginStart="@dimen/side_margin_small"
                android:layout_marginEnd="@dimen/side_margin_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textColor="@color/gray"
                    android:text="@string/profile_highest_medication"
                    android:layout_marginTop="@dimen/side_margin_small"
                    app:layout_constraintTop_toBottomOf="@id/card_personal_info"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_highest_medication"
                    android:textSize="15sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/side_margin_small"
                    android:layout_marginTop="@dimen/side_margin_small"
                    tools:text="January"
                    />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false"
                android:layout_marginStart="@dimen/side_margin_small"
                android:layout_marginEnd="@dimen/side_margin_small">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textColor="@color/gray"
                    android:text="@string/profile_next_medication"
                    android:layout_marginTop="@dimen/side_margin_small"
                    app:layout_constraintTop_toBottomOf="@id/card_personal_info"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_next_medications"
                    android:textSize="20sp"
                    android:textColor="@color/black"
                    android:layout_marginStart="@dimen/side_margin_small"
                    android:layout_marginTop="@dimen/side_margin_small"
                    tools:text="Omeprazole"
                    />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/button_save_changes"
        android:text="@string/profile_save_changes"
        android:textAllCaps="false"
        android:layout_marginStart="@dimen/side_margin_small"
        android:layout_marginEnd="@dimen/side_margin_small"
        android:layout_marginBottom="@dimen/side_margin_small"
        android:background="@color/colorPrimary"
        app:layout_constraintBottom_toBottomOf="parent"
        />

</android.support.constraint.ConstraintLayout>