<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2018 Ahmed, Umar Bello.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  ~
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/plain_back">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_medication_desc"
        android:textSize="24sp"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/side_margin_normal"
        android:layout_marginEnd="@dimen/side_margin_normal"
        android:layout_marginTop="@dimen/side_margin_normal"
        fontPath="fonts/Roboto-Regular.ttf"
        tools:text="Ulcer Medication"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/details_period_active"
        android:layout_marginStart="@dimen/side_margin_normal"
        android:layout_marginEnd="@dimen/side_margin_normal"
        android:layout_marginTop="@dimen/side_margin_normal"
        fontPath="fonts/Roboto-Regular.ttf"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_period_active"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/side_margin_normal"
        android:layout_marginEnd="@dimen/side_margin_normal"
        android:layout_marginTop="@dimen/side_margin_small"
        tools:text="2 Weeks."
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/details_period_left"
        android:layout_marginStart="@dimen/side_margin_normal"
        android:layout_marginEnd="@dimen/side_margin_normal"
        android:layout_marginTop="@dimen/side_margin_normal"
        fontPath="fonts/Roboto-Regular.ttf"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_period_left"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/side_margin_normal"
        android:layout_marginEnd="@dimen/side_margin_normal"
        android:layout_marginTop="@dimen/side_margin_small"
        tools:text="2 Months."
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/add_medication_range"
        android:layout_marginStart="@dimen/side_margin_normal"
        android:layout_marginEnd="@dimen/side_margin_normal"
        android:layout_marginTop="@dimen/side_margin_normal"
        fontPath="fonts/Roboto-Regular.ttf"
        />

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/side_margin_normal"
        android:layout_marginEnd="@dimen/side_margin_normal"
        android:layout_marginTop="@dimen/side_margin_small">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_start_date_label"
            android:textSize="15sp"
            android:text="@string/add_start_date"
            android:textColor="@color/black"
            fontPath="fonts/Roboto-Regular.ttf"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_end_date_label"
            android:textSize="15sp"
            android:text="@string/add_end_date"
            android:textColor="@color/black"
            fontPath="fonts/Roboto-Regular.ttf"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_start_date"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_start_date_label"
            tools:text="21/04/2019"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_end_date"
            android:textSize="20sp"
            android:textColor="@color/black"
            android:layout_marginTop="5dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/text_end_date_label"
            tools:text="2/05/2019"
            />
    </android.support.constraint.ConstraintLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:text="@string/title_interval"
        android:layout_marginStart="@dimen/side_margin_normal"
        android:layout_marginEnd="@dimen/side_margin_normal"
        android:layout_marginTop="@dimen/side_margin_normal"
        fontPath="fonts/Roboto-Regular.ttf"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/text_interval"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:layout_marginStart="@dimen/side_margin_normal"
        android:layout_marginEnd="@dimen/side_margin_normal"
        android:layout_marginTop="@dimen/side_margin_small"
        tools:text="8 Hours."
        />
</LinearLayout>